tests/snapshots/snapshot__artipacked.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"artipacked.yml\")).args([\"--persona=pedantic\"]).run()?"
snapshot_kind: text
---
warning[artipacked]: credential persistence through GitHub Actions artifacts
  --> @@INPUT@@:13:9
   |
13 |       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # tag=v4.2.2
   |         ---------------------------------------------------------------------------- does not set persist-credentials: false
   |
   = note: audit confidence → Low

warning[artipacked]: credential persistence through GitHub Actions artifacts
  --> @@INPUT@@:18:9
   |
18 |         - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # tag=v4.2.2
   |  _________-
19 | |         with:
20 | |           persist-credentials: true
   | |____________________________________- does not set persist-credentials: false
   |
   = note: audit confidence → Low

2 findings: 0 unknown, 0 informational, 0 low, 2 medium, 0 high
