tests/snapshots/snapshot__cache_poisoning-11.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"cache-poisoning/issue-343-repro.yml\")).run()?"
snapshot_kind: text
---
error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:5:1
   |
 5 | / on:
 6 | |   push:
 7 | |     tags:
 8 | |       - "v*.*.*"
   | |________________^ generally used when publishing artifacts generated at runtime
 9 |
...
26 |         - name: true-positive-2
27 |           uses: actions/setup-go@v5
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^ cache enabled by default here
   |
   = note: audit confidence → Low

error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:5:1
   |
 5 | / on:
 6 | |   push:
 7 | |     tags:
 8 | |       - "v*.*.*"
   | |________________^ generally used when publishing artifacts generated at runtime
 9 |
...
33 |           uses: actions/setup-go@v5
34 | /         with:
35 | |           go-version: stable
36 | |           cache: true
37 | |
38 | |       # Finding because setup enables cache explicitly
   | |______________________________________________________^ opt-in for caching here
   |
   = note: audit confidence → Low

error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:5:1
   |
 5 | / on:
 6 | |   push:
 7 | |     tags:
 8 | |       - "v*.*.*"
   | |________________^ generally used when publishing artifacts generated at runtime
 9 |
...
40 |           uses: actions/setup-go@v5
41 | /         with:
42 | |           go-version: stable
43 | |           cache: "true"
   | |________________________^ opt-in for caching here
   |
   = note: audit confidence → Low

7 findings (4 suppressed): 0 unknown, 0 informational, 0 low, 0 medium, 3 high
